[package]
name = "hpke-rs-libcrux"
version = "0.2.0-pre.1"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
documentation = "https://docs.rs/hpke-rs-evercrypt"
description = "Crypto backend for HPKE using formally verified code from libcrux."
readme = "Readme.md"
repository = "https://github.com/cryspen/hpke-rs"

[dependencies]
hpke-rs-crypto = { version = "0.2.0", path = "../traits" }
libcrux-hkdf = { version = "0.0.2" }
libcrux-kem = { version = "0.0.2" }
libcrux-chacha20poly1305 = { version = "0.0.2" }
# Randomness
rand = { version = "0.8" }
rand_chacha = { version = "0.3" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
deterministic-prng = [] # ⚠️ FOR TESTING ONLY.

[[bench]]
name = "bench_hkdf"
harness = false

[[bench]]
name = "bench_p256"
harness = false

[[bench]]
name = "bench_x25519"
harness = false
